Closed Bug 973308 Opened 12 years ago Closed 12 years ago

"Assertion failure: !isinf(t_min) && !isinf(t_max) (The first call to UpdateLinearParametersToIncludePoint should have made t_min and t_max non-infinite.)"

Categories

(Core :: Graphics, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: jruderman, Assigned: mstange)

References

Details

Attachments

(2 files)

Attached file stack
I tried to reproduce bug 928168 comment 58 in a debug build. I hit this instead: Assertion failure: !isinf(t_min) && !isinf(t_max) (The first call to UpdateLinearParametersToIncludePoint should have made t_min and t_max non-infinite.), at /Users/jruderman/trees/mozilla-central/gfx/2d/DrawTargetCG.cpp:476 I wasn't able to reproduce by loading the same Twitter pages, though. Interestingly, bug 928168 comment 68 also suggests a link between this assertion and the crash in bug 928168.
Attached patch v1Splinter Review
CG helpfully sets the origin of empty clip bounds to -inf, -inf. This messes up our calculations. My attempts to create a testcase for this were unsuccessful.
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Attachment #8377087 - Flags: review?(jmuizelaar)
Blocks: 928168
> My attempts to create a testcase for this were unsuccessful. The "new" crashes at bug 928168 now have STR. See bug 928168 comment #70 and bug 928168 comment #71.
I've opened bug 973971 for the crashes associated with this assertion.
No longer blocks: 928168
Comment on attachment 8377087 [details] [diff] [review] v1 Review of attachment 8377087 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/2d/DrawTargetCG.cpp @@ +412,5 @@ > CGPoint *start, > double dx, double dy, > double x, double y) > { > + MOZ_ASSERT(!isinf(x) && !isinf(y)); You might consider using MFBT's mozilla::IsFinite() function.
Attachment #8377087 - Flags: review?(jmuizelaar) → review+
Push to inbound with mozilla::IsFinite() (thanks Chris): https://hg.mozilla.org/integration/mozilla-inbound/rev/74b07332a161
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: