Bug 973308 - Don't let empty clip rects put infinities into the gradient calculations. r=jrmuizel